added analytics code

--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -43,6 +43,8 @@ html.no-js(lang='en')
 
 		if config.deploy
 			link(rel='stylesheet', type='text/css', media='screen', href='css/style.min.css')
+			script.
+				(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-57WGRHW');
 		else
 			link(rel='stylesheet', type='text/css', media='screen', href='css/bootstrap.css')
 			link(rel='stylesheet', type='text/css', href='css/font-awesome.css')
@@ -54,6 +56,10 @@ html.no-js(lang='en')
 		link(href='https://fonts.googleapis.com/css?family=Great+Vibes&subset=latin,latin-ext', rel='stylesheet', type='text/css')
 
 	body
+		if config.deploy
+			noscript
+				iframe(src='https://www.googletagmanager.com/ns.html?id=GTM-57WGRHW', height='0', width='0', style='display:none;visibility:hidden')
+
 		nav.navbar.navbar-inverse.navbar-fixed-top
 			.container-fluid
 				.navbar-header
